# smartpresence_server

./: smartpresence_server.slcp  smartpresence_server.slps  vscode.conf
cmake_gcc/: CMakeLists.txt  CMakePresets.json
